# sup-to-srt

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  README.md  build.sh  subtitle.sup
.gitea/workflows/: build.yaml  test.yaml
.github/workflows/: build-and-push.yaml  test.yaml
pgs/: Cargo.toml
pgs/src/: lib.rs  wire.rs
pgs/src/snapshots/: pgs__test__decode_subtitles.snap
src/: main.rs
src/snapshots/: sup_to_srt__test__subtitles_to_srt.snap
