[package]
name = "sup2srt"
version = "0.1.0"
edition = "2021"

[dependencies]
pgs = { path = "./pgs" }
tesseract = "0.15.1"
minifb = "0.27.0"
clap = { version = "4.5.24", features = ["derive"] }
color-eyre = "0.6.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
slotmap = "1.0.7"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
