[package]
name = "sup-to-srt"
version = "0.1.0"
edition = "2021"

[dependencies]
pgs = { path = "./pgs" }
tesseract = "0.15.1"
clap = { version = "4.5.24", features = ["derive"] }
color-eyre = "0.6.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
minifb = { version = "0.27.0", optional = true }

[features]
default = ["viewer"]
viewer = ["dep:minifb"]
